# clawhdf5_mirror

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  IMPROVEMENT_LOG.md  MERKLE_CHANGES.md  README.md  benchmark.md
.cargo/: config.toml
.github/workflows/: signing-bench-arm.yml
crates/clawhdf5/: Cargo.toml
crates/clawhdf5-accel/: Cargo.toml
crates/clawhdf5-accel/src/: avx512.rs
crates/clawhdf5-agent/: Cargo.toml
crates/clawhdf5-agent/src/: gpu_search.rs  integrity.rs  lib.rs  schema.rs  search.rs  storage.rs  wal.rs
crates/clawhdf5-agent/tests/: hnsw_integration.rs  integrity_e2e.rs  merkle_recovery_e2e.rs
crates/clawhdf5-android/: Cargo.toml
crates/clawhdf5-ann/: Cargo.toml
crates/clawhdf5-ann/src/: hnsw.rs
crates/clawhdf5-attack-harness/: Cargo.toml
crates/clawhdf5-attack-harness/attack-results/: matrix.csv
crates/clawhdf5-attack-harness/src/: attacks.rs  fixture.rs  main.rs  report.rs
crates/clawhdf5-bench/: Cargo.toml
crates/clawhdf5-bench/benches/: h5bench_meta.rs  h5bench_read.rs  h5bench_write.rs
crates/clawhdf5-cli/: Cargo.toml
crates/clawhdf5-derive/: Cargo.toml
crates/clawhdf5-filters/: Cargo.toml
crates/clawhdf5-filters/fuzz/: Cargo.toml
crates/clawhdf5-filters/fuzz/fuzz_targets/: fuzz_version_store.rs  fuzz_wal_record.rs
crates/clawhdf5-filters/src/: chacha20_filter.rs  filter_pipeline.rs  lib.rs  mock_keystore.rs  version_wal.rs  write_order.rs
crates/clawhdf5-filters/tests/: crash_vs_tamper_matrix.rs  encrypted_merkle_test.rs
crates/clawhdf5-format/: Cargo.toml
crates/clawhdf5-format/benches/: hash_bench.rs  parse_hash_bench.py  subset_proof_size_bench.rs
crates/clawhdf5-format/benches/results/: baselines-capability-matrix-localhost.localdomain.md  baselines-localhost.localdomain.csv  figure6-proof-size-COG.gp  hash-bench-explanatory-note-localhost.localdomain.md  hash-bench-localhost.localdomain.csv  hash-bench-raw-trials-localhost.localdomain.csv  phase1-COG.csv  phase1-explanatory-note-COG.md  phase1-plot-COG.gp  phase1-plot-boxplot-COG.gp  phase1-plot-lines-COG.gp  signing-COG.csv  signing-DESKTOP-0N3E8CV.csv  signing-github-actions-arm64.csv  subset-proof-size-explanatory-note-COG.md  subset-proof-size-raw-trials.csv  subset-proof-size.csv
crates/clawhdf5-format/examples/: gen_merkle_vectors.rs  gen_subset_vectors.rs  hash_bench_harness.rs  parallel_build_bench.rs  write_merkle_test.rs
crates/clawhdf5-format/fuzz/: Cargo.toml
crates/clawhdf5-format/fuzz/fuzz_targets/: fuzz_merkle_journal.rs  fuzz_merkle_tree.rs  fuzz_subset_proof.rs
crates/clawhdf5-format/src/: btree_v1.rs  chunk_cache.rs  chunked_read.rs  chunked_write.rs  data_layout.rs  data_layout_write.rs  data_read.rs  datatype.rs  dict_encoding.rs  file_writer.rs  filter_pipeline.rs  filters.rs  filters_szip.rs  fixed_array.rs  fractal_heap.rs  lib.rs  local_heap.rs  merkle.rs  merkle_journal.rs  merkle_recovery.rs  object_header.rs  provenance.rs  selection.rs  subset_proof.rs  symbol_table.rs  type_builders.rs
crates/clawhdf5-format/test-vectors/: merkle-vectors.json
crates/clawhdf5-format/tests/: derive_tests.rs  integration_test.rs  reference_tests.rs  writer_h5py_tests.rs
crates/clawhdf5-format/tests/fixtures/: vds_cyclic.h5
crates/clawhdf5-gpu/: Cargo.toml
crates/clawhdf5-io/: Cargo.toml
crates/clawhdf5-io/src/: lib.rs  mpi_vol.rs
crates/clawhdf5-migrate/: Cargo.toml
crates/clawhdf5-migrate/src/: hdf5_reader.rs  main.rs  sqlite_reader.rs  validate.rs
crates/clawhdf5-napi/: Cargo.toml
crates/clawhdf5-netcdf4/: Cargo.toml
crates/clawhdf5-py/: Cargo.toml
crates/clawhdf5-py/src/: lib.rs
crates/clawhdf5-secure-demo/: Cargo.toml
crates/clawhdf5-secure-demo/src/: file_sink.rs  main.rs
crates/clawhdf5-sign/: Cargo.toml
crates/clawhdf5-sign/examples/: generate_test_vectors.rs  signing_bench.rs
crates/clawhdf5-sign/fuzz/: Cargo.toml  README.md
crates/clawhdf5-sign/fuzz/fuzz_targets/: fuzz_hybrid_signature.rs
crates/clawhdf5-sign/src/: lib.rs
crates/clawhdf5-types/: Cargo.toml
crates/clawhdf5/examples/: baselines_bench.rs  goes18_chunk_test.rs  phase1_bench.rs  uncompress_goes.rs
crates/clawhdf5/src/: lib.rs
crates/clawhdf5/tests/: h5py_interop_tests.rs  integration_tests.rs
crates/libaec-sys/: Cargo.toml  build.rs
crates/libaec-sys/src/: lib.rs
docs/: EQSIM_DATA.md  merkle-hashing-parallelism.md  mpi-protocol.md  recovery-protocol.md
scripts/: check-nostd.sh
test-vectors/: hybrid-sig-vectors.json  morton-vectors.json  subset-vectors.json
