[workspace]
members = [
    "crates/clawhdf5-format",
    "crates/clawhdf5-types",
    "crates/clawhdf5-io",
    "crates/clawhdf5-filters",
    "crates/clawhdf5-derive",
    "crates/clawhdf5",
    "crates/clawhdf5-netcdf4",
    "crates/clawhdf5-ann",
    "crates/clawhdf5-py",
    "crates/clawhdf5-gpu",
    "crates/clawhdf5-accel",
    "crates/clawhdf5-agent",
    "crates/clawhdf5-migrate",
    "crates/clawhdf5-android",
    "crates/clawhdf5-cli",
    "crates/clawhdf5-napi",
    "crates/clawhdf5-bench",
    "crates/clawhdf5-sign",
    "crates/clawhdf5-attack-harness",
    "crates/clawhdf5-secure-demo",
    "crates/libaec-sys",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"

# hdf5-metno-sys 0.12.0's build script rejects H5_VERSION strings from the
# HDF5 2.x `develop` branch (e.g. "2.2.0") -- its version regex only lists
# minors 2.0/2.1. Vendored copy adds 2.2 so `clawhdf5-bench --features
# libhdf5-compare` can link against a self-built HDF5 develop for comparison.
[patch.crates-io]
hdf5-metno-sys = { path = "vendor/hdf5-metno-sys-0.12.0" }
