[package]
name = "clawhdf5-attack-harness"
version = "2.1.0"
edition = "2024"
license = "MIT"
description = "White-box red-team attack harness for the Merkle/AEAD integrity design (S2-D2-Yr2 P2.4)"
repository = "https://github.com/redclawsystems/clawhdf5"
keywords = ["hdf5", "security", "merkle", "red-team"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "attack-harness"
path = "src/main.rs"

[dependencies]
clawhdf5 = { path = "../clawhdf5", version = "2.1.0" }
clawhdf5-format = { path = "../clawhdf5-format", version = "2.1.0", features = ["merkle"] }
clawhdf5-filters = { path = "../clawhdf5-filters", version = "2.1.0", features = ["chacha20"] }
clawhdf5-sign = { path = "../clawhdf5-sign", version = "2.1.0", features = ["ed25519", "mldsa"] }
sha2 = { version = "0.10", default-features = false }
