[package]
name = "clawhdf5-bench"
version = "2.1.0"
edition = "2024"
description = "Benchmark harnesses for clawhdf5-agent (Track 8)"
license = "MIT"

[[bin]]
name = "longmemeval_bench"
path = "src/bin/longmemeval_bench.rs"

[[bin]]
name = "memory_arena"
path = "src/bin/memory_arena.rs"

[[bin]]
name = "footprint_bench"
path = "src/bin/footprint_bench.rs"

[[bin]]
name = "consolidation_efficiency"
path = "src/bin/consolidation_efficiency.rs"

[[bin]]
name = "ephemeral_perf"
path = "src/bin/ephemeral_perf.rs"

# ---------------------------------------------------------------------------
# h5bench-equivalent Criterion benchmarks
# ---------------------------------------------------------------------------

[[bench]]
name = "h5bench_write"
harness = false

[[bench]]
name = "h5bench_read"
harness = false

[[bench]]
name = "h5bench_meta"
harness = false

[dependencies]
clawhdf5-agent = { path = "../clawhdf5-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Optional: libhdf5 C wrapper for side-by-side comparison (requires system libhdf5).
# Enable with: cargo bench -p clawhdf5-bench --features libhdf5-compare
hdf5 = { version = "0.8", optional = true }

[dev-dependencies]
clawhdf5 = { path = "../clawhdf5" }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# When enabled, benchmarks add matching libhdf5 variants for side-by-side comparison.
libhdf5-compare = ["hdf5"]
