[package]
name = "clawhdf5-secure-demo"
version = "2.1.0"
edition = "2024"
license = "MIT"
description = "End-to-end demonstration assembling the full ClawHDF5 security stack (ChaCha20-Poly1305 encryption + Merkle integrity + hybrid Ed25519/ML-DSA-65 signing + crash-consistency + rollback) into one real HDF5 file"
repository = "https://github.com/redclawsystems/clawhdf5"
keywords = ["hdf5", "security", "merkle", "encryption", "signing"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "secure-file-lifecycle"
path = "src/main.rs"

[dependencies]
clawhdf5 = { path = "../clawhdf5", version = "2.1.0" }
clawhdf5-format = { path = "../clawhdf5-format", version = "2.1.0", features = ["merkle"] }
clawhdf5-filters = { path = "../clawhdf5-filters", version = "2.1.0", features = ["chacha20"] }
clawhdf5-sign = { path = "../clawhdf5-sign", version = "2.1.0", features = ["ed25519", "mldsa"] }
sha2 = { version = "0.10", default-features = false }
tempfile = "3"
